force-app/main/default/objects/Company_Sector__c/Company_Sector__c.object-meta.xml
<CustomObject>
    <label>Company Sector</label>
    <nameField>
        <displayFormat>COS-{00000000}</displayFormat>
        <label>Company Sector</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Sectors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>