force-app/main/default/objects/Company_Sector__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Company Sectors</relationshipLabel>
    <relationshipName>Company_Sectors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>