force-app/main/default/objects/Company_Sector__c/fields/Coverage_Sector_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Sector_Dependency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Coverage Sector Dependency</label>
    <referenceTo>Coverage_Sector_Dependency__c</referenceTo>
    <relationshipLabel>Company Sectors</relationshipLabel>
    <relationshipName>Company_Sectors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>